[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
     <artifactId>spatial</artifactId>
-    <version>1.1.16-W14J8</version>
+    <version>1.1.15-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Maven project-archetype for UnionVms modules</description>
 
@@ -267,7 +267,7 @@
 
     <scm>
         <connection>${scm.connection}</connection>
-        <tag>spatial-1.1.16-W14J8</tag>
+        <tag>spatial-1.1.15-SNAPSHOT</tag>
     </scm>
 
 
