--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,6 +14,12 @@
 
     <dependencies>
 
+		<dependency>
+			<groupId>fish.focus.uvms.maven</groupId>
+			<artifactId>uvms-pom-gis-deps</artifactId>
+			<type>pom</type>
+			<scope>provided</scope>
+		</dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -121,16 +127,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-spatial</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-transcoder</artifactId>
             <version>1.8</version>
@@ -153,6 +149,13 @@
             <artifactId>batik-codec</artifactId>
             <version>1.8</version>
         </dependency>
+        
+        <dependency>
+		    <groupId>org.javassist</groupId>
+		    <artifactId>javassist</artifactId>
+		    <version>3.22.0-GA</version>
+		    <scope>test</scope>
+		</dependency>
 
     </dependencies>
 
