--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <!-- The spatial name is used as a common point to rename the application alias visible in USM-->
         <spatial.name>Spatial</spatial.name>
         <docker.dev.version>3.31.16.w15</docker.dev.version>
+        <docker.liquibase.changeLogFile>LIQUIBASE/changelog/db-changelog-master.xml</docker.liquibase.changeLogFile>
+        <docker.liquibase.db.user>spatial</docker.liquibase.db.user>
+        <docker.liquibase.db.passwd>spatial</docker.liquibase.db.passwd>
         <spatial.model>1.0.12</spatial.model>
         <reporting.model>1.0.4</reporting.model>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -416,6 +419,7 @@
 	</profiles>
 
     <modules>
+        <module>LIQUIBASE</module>
         <module>rest</module>
         <module>service</module>
         <module>message</module>
