--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
         <artifactId>spatial</artifactId>
-        <version>1.1.18-SNAPSHOT</version>
+        <version>1.1.18</version>
     </parent>
     
 	<properties>
