--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
+            <version>${javaee.version}</version>
 		</dependency>
 	</dependencies>
 
