--- a/service/pom.xml
+++ b/service/pom.xml
@@ -113,6 +113,11 @@
             <groupId>org.geotools</groupId>
             <artifactId>gt-epsg-hsql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
+            <artifactId>movement-model</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
