--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
         <artifactId>spatial</artifactId>
-        <version>1.1.20</version>
+        <version>1.1.21-SNAPSHOT</version>
     </parent>
 
     <profiles>
