--- a/service2/pom.xml
+++ b/service2/pom.xml
@@ -11,6 +11,8 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>service2</artifactId>
+    <name>${project.parent.artifactId}-service2</name>
+
 
     <dependencies>
 
