added service2 to module

--- a/module/pom.xml
+++ b/module/pom.xml
@@ -81,6 +81,12 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>service2</artifactId>
+            <version>${project.parent.version}</version>
+            <type>ejb</type>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>spatial-model</artifactId>
             <version>${spatial.model}</version>
             <type>ejb</type>
