Added missing dep for spatial index

--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -96,6 +96,13 @@
 							<migrationSqlOutputFile>${project.build.directory}/full-update.sql</migrationSqlOutputFile>
 							<outputFileEncoding>UTF-8</outputFileEncoding>
 						</configuration>
+						<dependencies>
+							<dependency>
+								<groupId>com.github.lonnyj</groupId>
+								<artifactId>liquibase-spatial</artifactId>
+								<version>1.2.1</version>
+							</dependency>
+						</dependencies>
 						<executions>
 							<execution>
 								<id>update-schema-sql</id>
