--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
     <artifactId>spatial</artifactId>
-    <version>1.1.21-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Maven project-archetype for UnionVms modules</description>
 
@@ -389,7 +389,7 @@
     <modules>
         <module>LIQUIBASE</module>
         <module>rest</module>
-        <module>service</module>
+        <!--module>service</module-->
         <module>service2</module>
         <module>message</module>
         <module>module</module>
