--- a/service/pom.xml
+++ b/service/pom.xml
@@ -10,8 +10,8 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>service2</artifactId>
-    <name>${project.parent.artifactId}-service2</name>
+    <artifactId>service</artifactId>
+    <name>${project.parent.artifactId}-service</name>
 
 
     <dependencies>
