--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -7,7 +7,7 @@
    
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
-        <artifactId>spatial</artifactId>
+        <artifactId>spatialSwe</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
