--- a/module/pom.xml
+++ b/module/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>spatial-module</artifactId>
-    <name>spatial-module</name>
+    <artifactId>spatialSwe-module</artifactId>
+    <name>spatialSwe-module</name>
     <packaging>ear</packaging>
 
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
-        <artifactId>spatial</artifactId>
+        <artifactId>spatialSwe</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
@@ -21,13 +21,13 @@
                 <artifactId>maven-ear-plugin</artifactId>
                 <configuration>
                     <modules>
-                        <ejbModule>
+                        <!--ejbModule>
                             <groupId>${project.groupId}</groupId>
                             <artifactId>message</artifactId>
-                        </ejbModule>
+                        </ejbModule-->
                         <ejbModule>
                             <groupId>${project.groupId}</groupId>
-                            <artifactId>service</artifactId>
+                            <artifactId>serviceSwe</artifactId>
                         </ejbModule>
                         <ejbModule>
                             <groupId>${project.groupId}</groupId>
@@ -36,7 +36,7 @@
                         <webModule>
                             <groupId>${project.groupId}</groupId>
                             <context-root>${context.root}${project.parent.artifactId}</context-root>
-                            <artifactId>rest</artifactId>
+                            <artifactId>restSwe</artifactId>
                         </webModule>
                     </modules>
                     <skinnyWars>true</skinnyWars>
@@ -67,15 +67,15 @@
 			<type>pom</type>
 		</dependency>
         
-        <dependency>
+        <!--dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>message</artifactId>
             <version>${project.parent.version}</version>
             <type>ejb</type>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>service</artifactId>
+            <artifactId>serviceSwe</artifactId>
             <version>${project.parent.version}</version>
             <type>ejb</type>
         </dependency>
@@ -87,7 +87,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>rest</artifactId>
+            <artifactId>restSwe</artifactId>
             <version>${project.parent.version}</version>
             <type>war</type>
         </dependency>
