--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
     <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
-    <artifactId>spatial</artifactId>
+    <artifactId>spatialSwe</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Maven project-archetype for UnionVms modules</description>
@@ -138,15 +138,15 @@
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>service</artifactId>
+                <artifactId>serviceSwe</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
 
-            <dependency>
+            <!--dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>message</artifactId>
                 <version>${project.parent.version}</version>
-            </dependency>
+            </dependency-->
 
             <dependency>
                 <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
@@ -390,7 +390,6 @@
         <module>LIQUIBASE</module>
         <module>service</module>
         <module>rest</module>
-        <module>message</module>
         <module>module</module>
     </modules>
 </project>
