--- a/service/pom.xml
+++ b/service/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>spatial</artifactId>
+        <artifactId>spatialSwe</artifactId>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>service</artifactId>
+    <artifactId>serviceSwe</artifactId>
     <name>${project.parent.artifactId}-service</name>
 
 
@@ -57,11 +57,11 @@
             <version>2.9.4</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>message</artifactId>
             <scope>test</scope>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
