--- a/model/pom.xml
+++ b/model/pom.xml
@@ -3,10 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
-		<groupId>fish.focus.uvms.maven</groupId>
-		<artifactId>uvms-pom</artifactId>
-		<relativePath />
-		<version>1.18</version>
+        <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
+        <artifactId>spatialSwe</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
 	</parent>
     
     <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
