--- a/module/pom.xml
+++ b/module/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>spatial-module</artifactId>
-    <name>spatial-module</name>
+    <artifactId>spatialSwe-module</artifactId>
+    <name>spatialSwe-module</name>
     <packaging>ear</packaging>
 
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
-        <artifactId>spatial</artifactId>
+        <artifactId>spatialSwe</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
