--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
     <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
-    <artifactId>spatial</artifactId>
+    <artifactId>spatialSwe</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Maven project-archetype for UnionVms modules</description>
@@ -28,12 +28,15 @@
         <jackson.version>2.6.0</jackson.version>
         <logback.core.version>1.2.3</logback.core.version>
         <asset.model.version>4.0.0</asset.model.version>
-        <movement.model.version>5.1.0</movement.model.version>
+        <movement.model.version>5.2.1-UVMS</movement.model.version>
         <application.name>${project.parent.artifactId}</application.name>
         <application.version>${project.parent.version}</application.version>
-        <application.logfile>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}.log</application.logfile>
+        <!--application.logfile>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}.log</application.logfile>
         <application.error.logfile>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}-error.log</application.error.logfile>
-        <application.logfile.boot>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}-boot.log</application.logfile.boot>
+        <application.logfile.boot>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}-boot.log</application.logfile.boot-->
+        <application.logfile>/app/logs/spatialSwe/spatialSwe.log</application.logfile>
+        <application.error.logfile>/app/logs/spatialSwe/spatialSwe-error.log</application.error.logfile>
+        <application.logfile.boot>/app/logs/spatialSwe/spatialSwe-boot.log</application.logfile.boot>
         <geotools.version>14.4</geotools.version>
         <uvms.commons.version>3.0.32</uvms.commons.version>
         <uvms.test.version>0.0.8</uvms.test.version>
