--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -8,7 +8,7 @@
 
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
-        <artifactId>spatial</artifactId>
+        <artifactId>spatialSwe</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
     
