told the system to start docker when doing the service tests

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -11,6 +11,13 @@
     <artifactId>service</artifactId>
     <name>${project.parent.artifactId}-service</name>
 
+    <properties>
+        <docker.dev.start.phase>test-compile</docker.dev.start.phase>
+        <docker.liquibase.phase>test-compile</docker.liquibase.phase>
+        <docker.dev.stop.phase>verify</docker.dev.stop.phase>
+        <docker.dev.prestop.phase>install</docker.dev.prestop.phase>
+    </properties>
+
 
     <dependencies>
 
