--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,7 +14,7 @@
     <properties>
         <docker.dev.start.phase>test-compile</docker.dev.start.phase>
         <docker.liquibase.phase>test-compile</docker.liquibase.phase>
-        <docker.dev.prestop.phase>validate</docker.dev.prestop.phase>
+        <!-- docker.dev.prestop.phase>validate</docker.dev.prestop.phase -->
     </properties>
 
 
