--- a/service/pom.xml
+++ b/service/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>spatialSwe</artifactId>
         <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
-        <version>2.0.3-UVMS-SNAPSHOT</version>
+        <version>2.0.3-UVMS</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
