--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
     <artifactId>spatial</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.3-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Maven project-archetype for UnionVms modules</description>
 
@@ -236,7 +236,7 @@
 
     <scm>
         <connection>${scm.connection}</connection>
-        <tag>spatial-2.0.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
 
