--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <properties>
         <!-- The spatial name is used as a common point to rename the application alias visible in USM-->
         <spatial.name>Spatial</spatial.name>
-        <docker.dev.version>3.39.0.w17</docker.dev.version>
+        <docker.dev.version>3.39.2.w17</docker.dev.version>
         <docker.liquibase.changeLogFile>LIQUIBASE/changelog/db-changelog-master.xml</docker.liquibase.changeLogFile>
         <docker.liquibase.db.user>spatial</docker.liquibase.db.user>
         <docker.liquibase.db.passwd>spatial</docker.liquibase.db.passwd>
@@ -31,13 +31,13 @@
         <application.error.logfile>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}-error.log</application.error.logfile>
         <application.logfile.boot>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}-boot.log</application.logfile.boot>
         <geotools.version>14.4</geotools.version>
-        <uvms.commons.version>4.0.2</uvms.commons.version>
-        <usm4uvms.version>4.0.21</usm4uvms.version>
+        <uvms.commons.version>4.0.4</uvms.commons.version>
+        <usm4uvms.version>4.0.23</usm4uvms.version>
         <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
         <release.branch.name>uvms-1.0.0</release.branch.name>
         <maven.scm.provider.version>2.1.1</maven.scm.provider.version>
         <javaee.version>8.0</javaee.version>
-        <uvms.config.version>4.0.4</uvms.config.version>
+        <uvms.config.version>4.0.5</uvms.config.version>
         <database.dialect>postgres</database.dialect>
         <scm.connection>scm:git:https://github.com/UnionVMS/UVMS-SpatialModule-APP.git</scm.connection>
         <installAtEnd>false</installAtEnd>
@@ -157,15 +157,15 @@
             </dependency>
 
             <dependency>
-                <groupId>javax.xml</groupId>
+                <groupId>com.sun.xml.bind</groupId>
                 <artifactId>jaxb-impl</artifactId>
-                <version>2.1</version>
+                <version>2.3.2</version>
             </dependency>
 
             <dependency>
-                <groupId>javax.xml</groupId>
+                <groupId>com.sun.xml.bind</groupId>
                 <artifactId>jaxb-core</artifactId>
-                <version>2.1</version>
+                <version>2.3.0.1</version>
             </dependency>
 
             <dependency>
