--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -25,11 +25,11 @@
 			<scope>provided</scope>
 		</dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.28</version>
+            <groupId>fish.focus.uvms.maven</groupId>
+            <artifactId>uvms-pom-logging-deps</artifactId>
+            <version>1.24</version>
+            <type>pom</type>
         </dependency>
-
         <dependency>
 			<groupId>fish.focus.uvms.maven</groupId>
 			<artifactId>uvms-pom-monitoring-deps</artifactId>
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
-            <version>2.9.4</version>
+            <version>2.9.9</version>
             <scope>test</scope>
         </dependency>
         <dependency>
