Added test for user areas. Some cleanup at the same time.

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.9.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.9.9</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -59,6 +64,7 @@
             <artifactId>uvms-commons-message</artifactId>
             <version>${uvms.commons.version}</version>
         </dependency>
+
 
     </dependencies>
 
