--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -42,6 +42,12 @@
 		    <version>2.9.9</version>
 		    <scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.9.9</version>
+            <scope>test</scope>
+        </dependency>
         
 
         <dependency>
