Updated client implementation and fixed hanging docker instances

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <docker.dev.start.phase>test-compile</docker.dev.start.phase>
         <docker.liquibase.phase>test-compile</docker.liquibase.phase>
-        <docker.dev.prestop.phase>validate</docker.dev.prestop.phase>
+        <docker.dev.stop.phase>verify</docker.dev.stop.phase>
     </properties>
 
     <dependencies>
