--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>liquibase</artifactId>
+    <artifactId>spatial-liquibase</artifactId>
     <name>${project.artifactId}</name>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
         <artifactId>spatial</artifactId>
-        <version>1.1.16.1-SNAPSHOT</version>
+        <version>${uvms.spatial.module.version}</version>
     </parent>
 
     <properties>
