fix changelog path

--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -51,8 +51,8 @@
                 <db.user>spatial</db.user>
                 <db.passwd>spatial</db.passwd>
                 <db.defaultSchema>spatial</db.defaultSchema>
-                <db.changeLogFile>changelog/db-changelog-master.xml</db.changeLogFile>
-                <db.outputFile>changelog/generatedChangelog.xml</db.outputFile>
+                <db.changeLogFile>${project.basedir}/changelog/db-changelog-master.xml</db.changeLogFile>
+                <db.outputFile>${project.basedir}/changelog/generatedChangelog.xml</db.outputFile>
                 <db.diffTypes />
                 <driver.groupId>org.postgresql</driver.groupId>
                 <driver.artifactId>postgresql</driver.artifactId>
@@ -79,8 +79,8 @@
                 <db.user>SPATIAL</db.user>
                 <db.passwd>SPATIAL</db.passwd>
                 <db.defaultSchema>SPATIAL</db.defaultSchema>
-                <db.changeLogFile>changelog/db-changelog-master.xml</db.changeLogFile>
-                <db.outputFile>changelog/generatedChangelog.xml</db.outputFile>
+                <db.changeLogFile>${project.basedir}/changelog/db-changelog-master.xml</db.changeLogFile>
+                <db.outputFile>${project.basedir}/changelog/generatedChangelog.xml</db.outputFile>
                 <driver.groupId>com.oracle</driver.groupId>
                 <driver.artifactId>ojdbc7</driver.artifactId>
                 <driver.version>12.1.0.2.0</driver.version>
@@ -186,8 +186,8 @@
                 </plugins>
             </build>
             <properties>
-                <db.changeLogFile>changelog/db-changelog-master.xml</db.changeLogFile>
-                <db.docker.url>offline:postgresql?changeLogFile=target/databasechangelog.csv&amp;outputLiquibaseSql=true</db.docker.url>
+
+                <db.docker.url>offline:postgresql?changeLogFile=${project.build.directory}/databasechangelog.csv&amp;outputLiquibaseSql=true</db.docker.url>
             </properties>
         </profile>
     </profiles>
